contact links are added

--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
   <body>
     <header class="page-header">
 	<div class="container">
-      enotberetvrot@gmail.com
+    <a class="header-mail" href="mailto:enot_naoborot@gmail.com">
+      enot_naoborot@gmail.com
+    </a>
+    <a class="header-tel" href="tel:+7-923-999-8877.com">
+      +7-923-999-8877
+    </a>
 	  </div>
     </header>
 
