Contact references, user image (figure) added

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   <body>
     <header class="page-header">
 	<div class="container">
-    <a class="header-mail" href="mailto:enot_naoborot@gmail.com">
+    <a class="header-email" href="mailto:enot_naoborot@gmail.com">
       enot_naoborot@gmail.com
     </a>
-    <a class="header-tel" href="tel:+7-923-999-8877.com">
+    <a class="header-phone" href="tel:+7-923-999-8877.com">
       +7-923-999-8877
     </a>
 	  </div>
@@ -29,6 +29,9 @@
     <section class="intro">
 	<div class="container">
       <h2 class="subheading">Давайте познакомимся</h2>
+      <figure class="="user-image">
+        <img src="files/user.jpg" width="928" height="536" alt="Фотография неопознанного енота">
+      </figure>
       <h3>Пара слов о себе</h3>
       <p>Текст с парой слов о себе.</p>
       <h3>Чем могу быть полезен</h3>
