--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	<div class="container">
       <h2 class="subheading">Давайте познакомимся</h2>
       <figure class="="user-image">
-        <img src="files/user.jpg" width="928" height="536" alt="Фотография неопознанного енота">
+        <img src="user.jpg" width="928" height="536" alt="Фотография неопознанного енота">
       </figure>
       <h3>Пара слов о себе</h3>
       <p>Текст с парой слов о себе.</p>
