--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <section class="intro">
 	<div class="container">
       <h2 class="subheading">Давайте познакомимся</h2>
-      <figure class="="user-image">
+      <figure class="user-image">
         <img src="user.jpg" width="928" height="536" alt="Фотография неопознанного енота">
       </figure>
       <h3>Пара слов о себе</h3>
