--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	<div class="container">
       <h2 class="subheading">Давайте познакомимся</h2>
       <figure class="user-image">
-        <img src="user.jpg" width="928" height="536" alt="Фотография неопознанного енота">
+        <img src="files/user.jpg" width="928" height="536" alt="Фотография неопознанного енота">
       </figure>
       <h3>Пара слов о себе</h3>
       <p>Текст с парой слов о себе.</p>
@@ -42,9 +42,12 @@
     <section class="portfolio">
 	<div class="container">
       <h2 class="subheading">Мои работы</h2>
-
+<figure class="project-image">
+   <img src="files/project.jpg" width="928" height="536" alt="Сайт магазина товаров для дома">
+      </figure>
       <h3>Магазин товаров для дома</h3>
       <p>Мой первый сайт.</p>
+      <a class="button" href="source/project/index.html">Открыть страницу</a>
 
       <h3>Блог начинающего верстальщика</h3>
       <p>Статический блог про обучение HTML и CSS.</p>
