--- a/index.html
+++ b/index.html
@@ -32,25 +32,48 @@
       <figure class="user-image">
         <img src="files/user.jpg" width="928" height="536" alt="Фотография неопознанного енота">
       </figure>
-      <h3>Пара слов о себе</h3>
-      <p>Текст с парой слов о себе.</p>
-      <h3>Чем могу быть полезен</h3>
-      <p>Текст о том, чем могу быть полезен.</p>
+      <h3>Пара слов о себе:</h3>
+      <p><ul>
+        <li>родом из Северной Америки</li>
+          <li>хЫщник, молод и красив</li>
+        <li>блестящая шерстка и острые зубки</li>
+        <li>являюсь дальним родственником медведя, не смейтесь</li>
+        <li>могу жить до 20 лет</li>
+      </ul></p>
+      <h3>Чем могу быть полезен:</h3>
+      <p><ul>
+        <li>могу кусаться и драть когтями</li>
+        <li>у меня острый слух и нюх, могу вынюхать нужную информацию у конкурентов</li>
+        <li>умею воровать, не зря же у меня ручки</li>
+        <li>а с недавних пор я еще и джун-верстальщик, обращайтесь</li>
+      </ul></p>
+      <div class="skills">
+        <h3>Мои навыки</h3>
+        <dl class="skills-list">
+          <dt class="skills-html">HTML</dt>
+          <dd class="level"><div style="width: 60%;">60%</div></dd>
+          <dt class="skills-css">CSS</dt>
+          <dd class="level"><div style="width: 40%;">40%</div></dd>
+        </dl>
+      </div>
 	  </div>
     </section>
 
     <section class="portfolio">
 	<div class="container">
-      <h2 class="subheading">Мои работы</h2>
+      <h2 class="subheading">Мои работы:</h2>
 <figure class="project-image">
    <img src="files/project.jpg" width="928" height="536" alt="Сайт магазина товаров для дома">
       </figure>
       <h3>Магазин товаров для дома</h3>
       <p>Мой первый сайт.</p>
       <a class="button" href="source/project/index.html">Открыть страницу</a>
-
+<figure class="blog-image">
+   <img src="source/blog/blog.jpg" width="928" alt="Мой блог-верстальщика">
+      </figure>
       <h3>Блог начинающего верстальщика</h3>
       <p>Статический блог про обучение HTML и CSS.</p>
+      <a class="button" href="source/blog/index.html">Открыть страницу</a>
 	  </div>
     </section>
 
