--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
 <figure class="project-image">
    <img src="files/project.jpg" width="928" height="536" alt="Сайт магазина товаров для дома">
       </figure>
-      <h3>Магазин товаров для дома</h3>
-      <p>Мой первый сайт.</p>
+      <h3>Магазин товаров для дома Gloevk</h3>
+      <p>Здесь можно купить от лампочки до дивана</p>
       <a class="button" href="source/project/index.html">Открыть страницу</a>
 <figure class="blog-image">
    <img src="source/blog/blog.jpg" width="928" alt="Мой блог-верстальщика">
       </figure>
-      <h3>Блог начинающего верстальщика</h3>
+      <h3>Блог о несчастных буднях верстальщика-енота</h3>
       <p>Статический блог про обучение HTML и CSS.</p>
       <a class="button" href="source/blog/index.html">Открыть страницу</a>
 	  </div>
