--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	<div class="container">
       <h2 class="subheading">Давайте познакомимся</h2>
       <figure class="user-image">
-        <img src="files/user.jpg" width="928" height="536" alt="Фотография неопознанного енота">
+        <img src="files/user.jpg" width="928" height="536" alt="Фотография неопознанного енота" style="border-radius: 50px;">
       </figure>
       <h3>Пара слов о себе:</h3>
       <p><ul>
@@ -63,13 +63,13 @@
 	<div class="container">
       <h2 class="subheading">Мои работы:</h2>
 <figure class="project-image">
-   <img src="files/project.jpg" width="928" height="536" alt="Сайт магазина товаров для дома">
+   <img src="files/project.jpg" width="928" height="536" alt="Сайт магазина товаров для дома" style="border-radius: 50px;">
       </figure>
       <h3>Магазин товаров для дома Gloevk</h3>
       <p>Здесь можно купить от лампочки до дивана</p>
       <a class="button" href="source/project/index.html">Открыть страницу</a>
 <figure class="blog-image">
-   <img src="source/blog/blog.jpg" width="928" alt="Мой блог-верстальщика">
+   <img src="source/blog/blog.jpg" width="928" alt="Мой блог-верстальщика" style="border-radius: 50px;">
       </figure>
       <h3>Блог о несчастных буднях верстальщика-енота</h3>
       <p>Статический блог про обучение HTML и CSS.</p>
